--- a/src/.env
+++ b/src/.env
@@ -1,1 +1,1 @@
-OPENAI_API_KEY=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
+OPENAI_API_KEY=op://Private/Openai API Key /Section_hysjawc3ly5ekoonnfzpojfxyu/api key
