fixed gitignore file

--- a/src/.env
+++ b/src/.env
@@ -1,1 +1,1 @@
-OPENAI_API_KEY=op://Private/Openai API Key /Section_hysjawc3ly5ekoonnfzpojfxyu/api key
+OPENAI_API_KEY=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
