added docker file and removed api key

--- a/src/.env
+++ b/src/.env
@@ -1,1 +1,1 @@
-OPENAI_API_KEY = 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
+OPENAI_API_KEY = op://Private/Openai API Key/Section_armdaa7w5eyuezilw4rhkpda24/secret key
